--- a/text 1.html
+++ b/text 1.html
@@ -3,304 +3,155 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Interface</title>
+    <title>Profile Settings</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet">
     <style>
-        /* General Reset */
-        body, h1, p, input, button {
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f2f5;
             margin: 0;
             padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            width: 100%;
+            max-width: 480px;
+            background: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            padding: 20px;
             box-sizing: border-box;
         }
-
-        /* Chat Container */
-        .chat-container {
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-            width: 100%;
-            max-width: 100vw; /* Allow full width in landscape mode */
-            background-color: #f0f0f0;
-            overflow: hidden;
+        .profile-picture {
+            text-align: center;
         }
-
-        /* Header */
-        .chat-header {
-            display: flex;
-            align-items: center;
-            padding: 10px;
+        .profile-picture img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid #ddd;
+            margin-bottom: 10px;
+        }
+        .profile-picture input[type="file"] {
+            display: none;
+        }
+        .profile-picture button {
             background-color: #25D366;
             color: white;
-            border-radius: 20px 20px 0 0;
-            position: relative;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-            width: 100%;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
         }
-
-        .profile-pic {
-            width: 12vw;
-            height: 12vw;
-            max-width: 50px;
-            max-height: 50px;
-            border-radius: 50%;
-            margin-right: 10px;
-        }
-
-        .status-indicator {
-            width: 3vw;
-            height: 3vw;
-            max-width: 10px;
-            max-height: 10px;
-            border-radius: 50%;
-            background-color: #ffffff;
-            border: 2px solid #ffffff;
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            transform: translate(50%, 50%);
-        }
-
-        .status-online { background-color: #34b7f1; }
-        .status-offline { background-color: #999999; }
-        .status-typing { background-color: #f0a500; }
-
-        .participant-name {
-            flex: 1;
-            text-align: center;
-            font-size: 5vw;
-            max-font-size: 18px;
-            font-weight: bold;
-        }
-
-        /* Chat Area */
-        .chat-area {
-            flex: 1;
-            padding: 10px;
-            overflow-y: auto;
-            background-color: #ffffff;
-        }
-
-        .message {
-            display: flex;
-            flex-direction: column;
+        .form-group {
             margin-bottom: 15px;
         }
-
-        .message.sent {
-            align-items: flex-end;
-        }
-
-        .message.received {
-            align-items: flex-start;
-        }
-
-        .message-bubble {
-            max-width: 80%;
-            padding: 10px;
-            border-radius: 20px;
-            font-size: 4vw;
-            max-font-size: 14px;
-            color: #000000;
-        }
-
-        .message.sent .message-bubble {
-            background-color: #DCF8C6;
-            margin-right: 10px;
-            text-align: right;
-        }
-
-        .message.received .message-bubble {
-            background-color: #FFFFFF;
-            margin-left: 10px;
-            text-align: left;
-        }
-
-        .timestamp {
-            font-size: 3vw;
-            max-font-size: 12px;
-            color: #9E9E9E;
-            margin-top: 5px;
-        }
-
-        .date-separator {
-            text-align: center;
-            font-size: 3vw;
-            max-font-size: 12px;
-            color: #9E9E9E;
-            margin: 10px 0;
-        }
-
-        /* Footer */
-        .chat-footer {
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            background-color: #ffffff;
-            border-top: 1px solid #ddd;
-            position: fixed;
-            bottom: 0;
+        .form-group input, .form-group textarea {
             width: 100%;
-            max-width: 100vw; /* Allow full width in landscape mode */
-            box-shadow: 0 -2px 4px rgba(0,0,0,0.2);
-        }
-
-        .message-input {
-            flex: 1;
-            height: 40px;
-            padding: 0 10px;
+            padding: 10px;
+            border-radius: 5px;
             border: 1px solid #ddd;
-            border-radius: 20px;
-            background-color: #F0F0F0;
-            font-size: 4vw;
-            max-font-size: 14px;
-            margin-right: 10px;
         }
-
-        .send-button {
-            padding: 0 15px;
-            height: 40px;
-            border: none;
-            border-radius: 20px;
+        .form-group textarea {
+            height: 100px;
+            resize: vertical;
+        }
+        .form-group label {
+            margin-bottom: 5px;
+            display: block;
+        }
+        #cropper-container {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            z-index: 1000;
+        }
+        #cropper-container img {
+            max-width: 100%;
+            display: block;
+        }
+        #cropper-container button {
+            margin-top: 10px;
+        }
+        .save-button {
             background-color: #25D366;
             color: white;
-            font-size: 4vw;
-            max-font-size: 14px;
-            cursor: pointer;
-        }
-
-        .send-button:hover {
-            background-color: #1e8e4e;
-        }
-
-        .icon-button {
-            background: none;
             border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
             cursor: pointer;
-            font-size: 5vw;
-            max-font-size: 20px;
-            color: #25D366;
-            margin-right: 10px;
-        }
-
-        .icon-button:hover {
-            color: #1e8e4e;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 360px) {
-            .profile-pic {
-                width: 50px;
-                height: 50px;
-            }
-
-            .status-indicator {
-                width: 10px;
-                height: 10px;
-            }
-
-            .participant-name {
-                font-size: 18px;
-            }
-
-            .message-bubble {
-                font-size: 14px;
-            }
-
-            .timestamp {
-                font-size: 12px;
-            }
-
-            .date-separator {
-                font-size: 12px;
-            }
-
-            .message-input {
-                font-size: 14px;
-            }
-
-            .send-button {
-                font-size: 14px;
-            }
-
-            .icon-button {
-                font-size: 20px;
-            }
-        }
-
-        @media (orientation: landscape) {
-            .chat-header, .chat-footer {
-                padding: 15px;
-            }
-
-            .profile-pic {
-                width: 10vw;
-                height: 10vw;
-            }
-
-            .status-indicator {
-                width: 2vw;
-                height: 2vw;
-            }
-
-            .participant-name {
-                font-size: 4vw;
-            }
-
-            .message-bubble {
-                font-size: 3vw;
-            }
-
-            .timestamp {
-                font-size: 2vw;
-            }
-
-            .date-separator {
-                font-size: 2vw;
-            }
-
-            .message-input {
-                font-size: 3vw;
-            }
-
-            .send-button {
-                font-size: 3vw;
-            }
-
-            .icon-button {
-                font-size: 4vw;
-            }
+            width: 100%;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <div class="chat-container">
-        <!-- Header -->
-        <header class="chat-header">
-            <img src="profile-pic.jpg" alt="Profile Picture" class="profile-pic">
-            <div class="status-indicator status-online"></div>
-            <h1 class="participant-name">John Doe</h1>
-        </header>
-
-        <!-- Chat Area -->
-        <div class="chat-area">
-            <div class="date-separator">September 1, 2024</div>
-            <div class="message received">
-                <div class="message-bubble">Hello! How are you?</div>
-                <div class="timestamp">10:00 AM</div>
-            </div>
-            <div class="message sent">
-                <div class="message-bubble">I'm good, thanks! How about you?</div>
-                <div class="timestamp">10:05 AM</div>
-            </div>
-            <!-- Add more messages here -->
+    <div class="container">
+        <div class="profile-picture">
+            <img id="profile-image" src="https://i.imghippo.com/files/ShB8h1725286261.jpg" alt="Profile Picture">
+            <input type="file" id="upload">
+            <button onclick="document.getElementById('upload').click()">Upload Picture</button>
         </div>
-
-        <!-- Footer -->
-        <footer class="chat-footer">
-            <button class="icon-button">😀</button>
-            <button class="icon-button">📎</button>
-            <input type="text" placeholder="Type a message" class="message-input">
-            <button class="send-button">Send</button>
-        </footer>
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" placeholder="Enter your name">
+        </div>
+        <div class="form-group">
+            <label for="bio">Bio</label>
+            <textarea id="bio" placeholder="Write a short bio"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="dob">Date of Birth</label>
+            <input type="date" id="dob">
+        </div>
+        <button class="save-button">Save Changes</button>
     </div>
+
+    <!-- Cropping Container -->
+    <div id="cropper-container">
+        <img id="cropper-image" src="" alt="Image for cropping"/>
+        <button id="crop-confirm">Confirm</button>
+        <button id="crop-cancel">Cancel</button>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
+    <script>
+        document.getElementById('upload').addEventListener('change', function (event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    const image = document.getElementById('cropper-image');
+                    image.src = e.target.result;
+                    document.getElementById('cropper-container').style.display = 'block';
+
+                    const cropper = new Cropper(image, {
+                        aspectRatio: 1,
+                        viewMode: 1,
+                    });
+
+                    document.getElementById('crop-confirm').addEventListener('click', function () {
+                        const canvas = cropper.getCroppedCanvas();
+                        document.getElementById('profile-image').src = canvas.toDataURL();
+                        document.getElementById('cropper-container').style.display = 'none';
+                    });
+
+                    document.getElementById('crop-cancel').addEventListener('click', function () {
+                        document.getElementById('cropper-container').style.display = 'none';
+                    });
+                };
+                reader.readAsDataURL(file);
+            }
+        });
+    </script>
 </body>
 </html>
