--- a/text 1.html
+++ b/text 1.html
@@ -27,6 +27,7 @@
         }
         .profile-picture {
             text-align: center;
+            margin-bottom: 20px;
         }
         .profile-picture img {
             width: 150px;
@@ -46,6 +47,11 @@
             padding: 10px 20px;
             border-radius: 5px;
             cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s;
+        }
+        .profile-picture button:hover {
+            background-color: #1ebe5e;
         }
         .form-group {
             margin-bottom: 15px;
@@ -63,6 +69,7 @@
         .form-group label {
             margin-bottom: 5px;
             display: block;
+            font-weight: bold;
         }
         #cropper-container {
             display: none;
@@ -71,16 +78,39 @@
             left: 50%;
             transform: translate(-50%, -50%);
             background: white;
-            padding: 10px;
+            padding: 20px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
             z-index: 1000;
+            border-radius: 8px;
+            max-width: 90vw;
+            max-height: 80vh;
+            overflow: hidden;
         }
         #cropper-container img {
-            max-width: 100%;
+            width: 100%;
+            height: auto;
             display: block;
+            border-radius: 8px;
         }
         #cropper-container button {
-            margin-top: 10px;
+            background-color: #25D366;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s;
+        }
+        #cropper-container button:hover {
+            background-color: #1ebe5e;
+        }
+        #cropper-container .cancel-button {
+            background-color: #f44336;
+            margin-left: 10px;
+        }
+        #cropper-container .cancel-button:hover {
+            background-color: #c62828;
         }
         .save-button {
             background-color: #25D366;
@@ -91,6 +121,11 @@
             cursor: pointer;
             width: 100%;
             text-align: center;
+            font-size: 16px;
+            transition: background-color 0.3s;
+        }
+        .save-button:hover {
+            background-color: #1ebe5e;
         }
     </style>
 </head>
@@ -119,8 +154,10 @@
     <!-- Cropping Container -->
     <div id="cropper-container">
         <img id="cropper-image" src="" alt="Image for cropping"/>
-        <button id="crop-confirm">Confirm</button>
-        <button id="crop-cancel">Cancel</button>
+        <div>
+            <button id="crop-confirm">Confirm</button>
+            <button id="crop-cancel" class="cancel-button">Cancel</button>
+        </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
@@ -137,10 +174,16 @@
                     const cropper = new Cropper(image, {
                         aspectRatio: 1,
                         viewMode: 1,
+                        zoomable: false,
+                        movable: false,
+                        rotatable: false
                     });
 
                     document.getElementById('crop-confirm').addEventListener('click', function () {
-                        const canvas = cropper.getCroppedCanvas();
+                        const canvas = cropper.getCroppedCanvas({
+                            width: 150,
+                            height: 150
+                        });
                         document.getElementById('profile-image').src = canvas.toDataURL();
                         document.getElementById('cropper-container').style.display = 'none';
                     });
