--- a/index.html
+++ b/index.html
@@ -3,253 +3,159 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Settings</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet">
+    <title>Spotify Song Player</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f2f5;
-            margin: 0;
-            padding: 0;
+            background-color: #121212;
+            color: #ffffff;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
         }
+
         .container {
-            width: 100%;
-            max-width: 480px;
-            background: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            padding: 20px;
-            box-sizing: border-box;
-            position: relative;
-        }
-        .profile-picture {
             text-align: center;
-            margin-bottom: 20px;
-        }
-        .profile-picture img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 2px solid #ddd;
-            margin-bottom: 10px;
-            display: inline-block;
-        }
-        .profile-picture input[type="file"] {
-            display: none;
-        }
-        .profile-picture button {
-            background-color: #25D366;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: all 100ms linear;
-            position: relative;
-            overflow: hidden;
-            box-shadow: inset 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-        }
-        .profile-picture button:hover {
-            background-color: #1ebe5e;
-        }
-        .profile-picture button::before {
-            content: "";
+            max-width: 600px;
             width: 100%;
-            height: 100%;
-            background-color: #fff;
-            position: absolute;
-            border-radius: inherit;
-            z-index: -1;
-            top: 0;
-            left: 0;
-            transition: all 500ms ease-in-out;
-            opacity: 0;
-            animation: flash 100ms ease-in-out;
-            transform: scaleX(2) scaleY(2);
         }
-        .profile-picture button:hover::before {
-            opacity: 1;
-            transform: scaleX(1) scaleY(1);
-        }
-        @keyframes flash {
-            0% {
-                opacity: 1;
-                transform: translate(45px);
-            }
-            100% {
-                opacity: 0;
-                transform: translate(0);
-            }
-        }
-        .profile-picture .remove-photo {
-            display: block;
-            margin-top: 10px;
-            color: #f44336;
-            font-size: 16px;
-            cursor: pointer;
-            border: none;
-            background: none;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        .form-group input, .form-group textarea {
-            width: 100%;
+
+        input[type="text"] {
+            width: 80%;
             padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #1db954;
             border-radius: 5px;
-            border: 1px solid #ddd;
+            background-color: #1e1e1e;
+            color: #ffffff;
         }
-        .form-group textarea {
-            height: 100px;
-            resize: vertical;
-        }
-        .form-group label {
-            margin-bottom: 5px;
-            display: block;
-            font-weight: bold;
-        }
-        #cropper-container {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: white;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-            z-index: 1000;
-            border-radius: 8px;
-            max-width: 90vw;
-            max-height: 80vh;
-            overflow: hidden;
-        }
-        #cropper-container img {
-            width: 100%;
-            height: auto;
-            display: block;
-            border-radius: 8px;
-        }
-        #cropper-container button {
-            background-color: #25D366;
-            color: white;
-            border: none;
+
+        button {
             padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s;
-        }
-        #cropper-container button:hover {
-            background-color: #1ebe5e;
-        }
-        #cropper-container .cancel-button {
-            background-color: #f44336;
-            margin-left: 10px;
-        }
-        #cropper-container .cancel-button:hover {
-            background-color: #c62828;
-        }
-        .save-button {
-            background-color: #25D366;
-            color: white;
             border: none;
-            padding: 10px 20px;
             border-radius: 5px;
+            background-color: #1db954;
+            color: #ffffff;
             cursor: pointer;
-            width: 100%;
-            text-align: center;
-            font-size: 16px;
-            transition: background-color 0.3s;
         }
-        .save-button:hover {
-            background-color: #1ebe5e;
+
+        button:hover {
+            background-color: #1ed760;
+        }
+
+        #trackInfo {
+            margin-top: 20px;
+        }
+
+        #player {
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="profile-picture">
-            <img id="profile-image" src="" alt="Profile Picture">
-            <input type="file" id="upload">
-            <button onclick="document.getElementById('upload').click()">Upload Picture</button>
-            <button class="remove-photo" id="remove-photo">🗑️ Remove Photo</button>
-        </div>
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" id="name" placeholder="Enter your name">
-        </div>
-        <div class="form-group">
-            <label for="bio">Bio</label>
-            <textarea id="bio" placeholder="Write a short bio"></textarea>
-        </div>
-        <div class="form-group">
-            <label for="dob">Date of Birth</label>
-            <input type="date" id="dob">
-        </div>
-        <button class="save-button">Save Changes</button>
+        <h1>Spotify Song Player</h1>
+        <input type="text" id="songName" placeholder="Enter song name">
+        <button id="searchBtn">Search</button>
+        <div id="trackInfo"></div>
+        <div id="player"></div>
     </div>
-
-    <!-- Cropping Container -->
-    <div id="cropper-container">
-        <img id="cropper-image" src="" alt="Image for cropping"/>
-        <div>
-            <button id="crop-confirm">Confirm</button>
-            <button id="crop-cancel" class="cancel-button">Cancel</button>
-        </div>
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
     <script>
-        const profileImage = document.getElementById('profile-image');
-        const uploadInput = document.getElementById('upload');
-        const cropperContainer = document.getElementById('cropper-container');
-        const cropperImage = document.getElementById('cropper-image');
-        const cropConfirmButton = document.getElementById('crop-confirm');
-        const cropCancelButton = document.getElementById('crop-cancel');
-        const removePhotoButton = document.getElementById('remove-photo');
-        let cropper;
+        const clientId = '322a91dd92bc4dd2b1f650d7caaf92eb';
+        const redirectUri = 'http://localhost:8000';  // Adjust this to your actual redirect URI
+        const scopes = 'streaming user-read-email user-read-private';
+        let accessToken = '';
+        let player;
 
-        uploadInput.addEventListener('change', function (event) {
-            const file = event.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = function (e) {
-                    cropperImage.src = e.target.result;
-                    cropperContainer.style.display = 'block';
-                    cropper = new Cropper(cropperImage, {
-                        aspectRatio: 1,
-                        viewMode: 1,
-                        zoomable: false,
-                        movable: false,
-                        rotatable: false
-                    });
-                };
-                reader.readAsDataURL(file);
+        function fetchAccessToken() {
+            const authUrl = `https://accounts.spotify.com/authorize?client_id=${clientId}&response_type=token&redirect_uri=${encodeURIComponent(redirectUri)}&scope=${encodeURIComponent(scopes)}`;
+            window.location.href = authUrl;
+        }
+
+        function getAccessTokenFromUrl() {
+            const hash = window.location.hash.substring(1);
+            const params = new URLSearchParams(hash);
+            return params.get('access_token');
+        }
+
+        function initializePlayer() {
+            window.onSpotifyWebPlaybackSDKReady = () => {
+                player = new Spotify.Player({
+                    name: 'Web Playback SDK Quick Start Player',
+                    getOAuthToken: cb => { cb(accessToken); }
+                });
+
+                // Error handling
+                player.addListener('initialization_error', ({ message }) => console.error(message));
+                player.addListener('authentication_error', ({ message }) => console.error(message));
+                player.addListener('account_error', ({ message }) => console.error(message));
+                player.addListener('playback_error', ({ message }) => console.error(message));
+
+                // Playback status updates
+                player.addListener('player_state_changed', state => {
+                    console.log(state);
+                });
+
+                // Ready
+                player.addListener('ready', ({ device_id }) => {
+                    console.log('Ready with Device ID', device_id);
+                    document.getElementById('searchBtn').addEventListener('click', () => searchAndPlaySong());
+                });
+
+                // Not Ready
+                player.addListener('not_ready', ({ device_id }) => {
+                    console.log('Device ID has gone offline', device_id);
+                });
+
+                player.connect();
+            };
+        }
+
+        async function searchAndPlaySong() {
+            const songName = document.getElementById('songName').value;
+            if (!songName) {
+                alert('Please enter a song name');
+                return;
             }
-        });
 
-        cropConfirmButton.addEventListener('click', function () {
-            const canvas = cropper.getCroppedCanvas({
-                width: 150,
-                height: 150
+            const response = await fetch(`https://api.spotify.com/v1/search?q=${encodeURIComponent(songName)}&type=track&limit=1`, {
+                headers: {
+                    Authorization: `Bearer ${accessToken}`
+                }
             });
-            profileImage.src = canvas.toDataURL('image/jpeg', 1); // Ensure high quality
-            cropperContainer.style.display = 'none';
-        });
+            const data = await response.json();
 
-        cropCancelButton.addEventListener('click', function () {
-            cropperContainer.style.display = 'none';
-        });
+            if (data.tracks.items.length > 0) {
+                const track = data.tracks.items[0];
+                const trackUri = track.uri;
 
-        removePhotoButton.addEventListener('click', function () {
-            profileImage.src = '';
+                player.resume().then(() => {
+                    player.queue(trackUri).then(() => {
+                        player.play();
+                        document.getElementById('trackInfo').innerHTML = `
+                            <p>Song Name: ${track.name}</p>
+                            <p>Artist: ${track.artists.map(artist => artist.name).join(', ')}</p>
+                            <p>Album: ${track.album.name}</p>
+                            <p>Release Date: ${track.album.release_date}</p>
+                        `;
+                    });
+                });
+            } else {
+                document.getElementById('trackInfo').innerHTML = '<p>Song not found.</p>';
+            }
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            accessToken = getAccessTokenFromUrl();
+            if (!accessToken) {
+                fetchAccessToken();
+            } else {
+                initializePlayer();
+            }
         });
     </script>
 </body>
-                </html>
+</html>
