--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
     <script>
         const clientId = '322a91dd92bc4dd2b1f650d7caaf92eb';
-        const redirectUri = 'http://localhost:8000';  // Adjust this to your actual redirect URI
+        const redirectUri = 'https://gui-chat-app.onrender.com';  // Adjust this to your actual redirect URI
         const scopes = 'streaming user-read-email user-read-private';
         let accessToken = '';
         let player;
